# fastapi-disconnect

./: README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  publish.yml
examples/: app.py
src/fastapi_disconnect/: __init__.py
tests/: test_cancel_on_disconnect.py
