[project]
name = "fastapi-disconnect"
version = "0.1.0"
description = "Cancel FastAPI request handlers when the client disconnects"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "qweeze", email = "qweeeze@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.0",
    "starlette>=0.40",
]
keywords = ["fastapi", "starlette", "asgi", "cancellation", "disconnect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/qweeze/fastapi-disconnect"

[dependency-groups]
dev = [
    "fastapi>=0.115.3",  # first release compatible with starlette>=0.40
    "uvicorn>=0.30",
    "pytest>=8.0",
    "mypy>=1.14",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_disconnect"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF",
]
